Add state and props to checkpoint file for assignment

--- a/counter.html
+++ b/counter.html
@@ -17,9 +17,13 @@
        constructor(props){
            super(props);
            this.state = {
-             number: 1
-           }
+             number: 1, 
+             duration: 24
+            
+            }
+
          }
+
 
         render() {
           return (
@@ -27,7 +31,10 @@
               <img src={this.props.image} alt="Bloc Logo"/>
               <h2>Current program: {this.props.label}</h2>
               <h3>Current week: {this.state.number}</h3>
+              <h4>Course Duration: {this.state.duration} weeks.</h4>
+
               <p>Current Date: {this.props.date.toLocaleDateString()}</p>
+              <p>Course Description: {this.props.description}</p>
             </div>
           );
         }
@@ -39,7 +46,8 @@
       }
 
       Counter.defaultProps = {
-        label: "Web Developer Track"
+        label: "Web Developer Track" , 
+        description: "  This course is designed to start you on a path toward future studies in web development and design, no matter how little experience or technical knowledge you currently have. The web is a very big place, and if you are the typical internet user, you probably visit several websites every day, whether for business, entertainment or education. But have you ever wondered how these websites actually work? How are they built? How do browsers, computers, and mobile devices interact with the web? What skills are necessary to build a website? With almost 1 billion websites now on the internet, the answers to these questions could be your first step toward a better understanding of the internet and developing a new set of internet skills.  "
       }
 
       ReactDOM.render(
